--- a/TaskManagementSystem.Api/appsettings.json
+++ b/TaskManagementSystem.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=NIKITA\\SQLEXPRESS;Database=TMSDb;Trusted_Connection=True;"
+    "DefaultConnection": "Server=NIKITA\\SQLEXPRESS;Database=TMSDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
