--- a/TaskManagementSystem.Infrastructure/TaskManagementSystem.Infrastructure.csproj
+++ b/TaskManagementSystem.Infrastructure/TaskManagementSystem.Infrastructure.csproj
@@ -23,4 +23,9 @@
       </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Contracts\" />
+      <Folder Include="Repositories\" />
+    </ItemGroup>
+
 </Project>
