--- a/TaskManagementSystem.Api/appsettings.json
+++ b/TaskManagementSystem.Api/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=NIKITA\\SQLEXPRESS;Database=TMSDb;Trusted_Connection=True;TrustServerCertificate=True;"
   },
+  "Jwt": {
+    "Issuer": "your_issuer",
+    "Audience": "your_audience",
+    "SecretKey": "jwtjwtjwtjwt"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
