repository fixes added

--- a/TaskManagementSystem.Infrastructure/TaskManagementSystem.Infrastructure.csproj
+++ b/TaskManagementSystem.Infrastructure/TaskManagementSystem.Infrastructure.csproj
@@ -20,7 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\TaskManagementSystem.Application\TaskManagementSystem.Application.csproj" />
+      <ProjectReference Include="..\TaskManagementSystem.Domain\TaskManagementSystem.Domain.csproj" />
     </ItemGroup>
 
 </Project>
