added UserTask endpoints

--- a/TaskManagementSystem.Api/appsettings.json
+++ b/TaskManagementSystem.Api/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=NIKITA\\SQLEXPRESS;Database=TMSDb;Trusted_Connection=True;TrustServerCertificate=True;"
-  },
+    "DefaultConnection": "Host=localhost;Port=5432;Database=TMSDb;Username=postgres;Password=Nikagrin123;"  },
   "Jwt": {
     "Issuer": "TNS",
     "Audience": "your_audience",
