--- a/TaskManagementSystem.Domain/TaskManagementSystem.Domain.csproj
+++ b/TaskManagementSystem.Domain/TaskManagementSystem.Domain.csproj
@@ -10,4 +10,8 @@
       <Folder Include="Constants\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
+    </ItemGroup>
+
 </Project>
